--- a/style.css
+++ b/style.css
@@ -15,3 +15,33 @@
   --fw-medium: 500;
   --fw-bold: 700;
 }
+
+/* RESET */
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font: inherit;
+}
+
+body {
+  width: 100%;
+  min-height: 100vh;
+}
+
+img {
+  max-width: 100%;
+  display: block;
+}
+
+button {
+  display: inline-block;
+  background: transparent;
+  color: inherit;
+  border: none;
+  cursor: pointer;
+  outline: transparent;
+}
