--- a/style.css
+++ b/style.css
@@ -91,3 +91,15 @@ h2 {
   border-radius: var(--rounded-md);
   box-shadow: 0.5em 1em 2em rgba(0, 0, 0, 0.1);
 }
+
+.card__img-wrapper {
+  border-radius: var(--rounded-md) var(--rounded-md) 0 0;
+  overflow: hidden;
+}
+
+.card__img {
+  width: 100%;
+  height: 12.5em;
+  object-fit: cover;
+  object-position: center 25%;
+}
