--- a/style.css
+++ b/style.css
@@ -165,9 +165,6 @@ h2 {
 }
 
 .card__share-btn:where(:hover, :focus-visible) {
-  background-color: hsl(var(--clr-blue-600));
-}
-
-.card__share-btn:where(:hover, :focus-visible) img {
-  filter: brightness(0) invert(1);
+  background-color: hsl(var(--clr-blue-400));
+  color: hsl(var(--clr-blue-50));
 }
