--- a/style.css
+++ b/style.css
@@ -162,6 +162,7 @@ h2 {
   display: grid;
   place-content: center;
   border-radius: 50%;
+  transition: background-color 0.15s ease-in-out, color 0.15s ease-in-out;
 }
 
 .card__share-btn:where(:hover, :focus-visible) {
@@ -215,6 +216,7 @@ h2 {
   place-content: center;
   border-radius: 50%;
   margin-left: auto;
+  transition: background-color 0.15s ease-in-out, color 0.15s ease-in-out;
 }
 
 .card__popup-btn:where(:hover, :focus-visible) {
